syntax = "proto3";
import "WeaponLoadout.proto";

message SaveWeaponLoadoutMessage {
	WeaponLoadout weaponLoadoutData = 1;
}